<resources>
    <string name="app_name">News</string>
    <string name="no_updates_available">No updates available</string>
    <string name="no_internet_connection">No Internet connection available!</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_page_size_label">Page Size</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">10</string>

    <string name="settings_ordering_label">Order by</string>
    <string name="settings_ordering_key" translatable="false">order_by</string>
    <string name="settings_ordering_default" translatable="false">newest</string>

    <string name="settings_section_id_label">Section</string>
    <string name="settings_section_id_key" translatable="false">section_id</string>
    <string name="settings_section_id_default" translatable="false"></string>
</resources>
