<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/settings_section_id_default"
        android:entries="@array/settings_section_id_titles"
        android:entryValues="@array/settings_section_id_values"
        android:key="@string/settings_section_id_key"
        android:title="@string/settings_section_id_label" />
    <ListPreference
        android:defaultValue="@string/settings_ordering_default"
        android:entries="@array/settings_order_by_titles"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_ordering_key"
        android:title="@string/settings_ordering_label" />
    <ListPreference
        android:defaultValue="@string/settings_page_size_default"
        android:entries="@array/settings_page_size_titles"
        android:entryValues="@array/settings_page_size_values"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />
</PreferenceScreen>